@@ -2,6 +2,8 @@
 	changed StringBuf.add implementation
 	added haxe.Firebug
 	allowed variable return type for overriden/implemented methods
+	display error position in front of each error line
+	improved error messages when optional arguments not matched
 
 2007-01-01: 1.10
 	fix in haxe.remoting.SocketConnection.readAnswer
